Update test case, update parser for mypick

--- a/test/test-bookmarks_new_ilust.htm
+++ b/test/test-bookmarks_new_ilust.htm
@@ -582,7 +582,20 @@ text-decoration: underline;
 <nav class="column-order-menu"><div class="pager-container"><span class="prev"></span><ul class="page-list"><li class="current">1</li><li><a href="?p=2">2</a></li><li><a href="?p=3">3</a></li><li><a href="?p=4">4</a></li><li><a href="?p=5">5</a></li><li><a href="?p=6">6</a></li><li><a href="?p=7">7</a></li><li><a href="?p=8">8</a></li><li><a href="?p=9">9</a></li></ul><span class="next"><a href="?p=2" rel="next" class="_button" title="Next"><i class="_icon sprites-next-linked"></i></a></span></div></nav></div></div>
 <script>pixiv.setupBeforeReady();</script><div id="header-banner">
 <span class='multi-ads-area'>
-    <iframe src="http://serv.ads.pixiv.org/get.php?zone_id=header&amp;segment=abroad&amp;page_id=all&amp;num=51582a1a914" width="468" height="68" scrolling="no" marginwidth="0" style="border:none;" frameborder="0"></iframe></span></div><div class="ad-footer">
+    
+<script type="text/javascript"><!--
+google_ad_client = "ca-pub-2235350438225973";
+/* pixiv（PC版） ローテーションバナー　対海外ユーザー */
+google_ad_slot = "6233432044";
+google_ad_width = 468;
+google_ad_height = 60;
+google_page_url = "http://www.pixiv.net/";
+//-->
+</script>
+<script type="text/javascript"
+src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+</span></div><div class="ad-footer">
 <span class='multi-ads-area'>
     
 <script type="text/javascript"><!--
