--- a/test/test-member-noavatar.htm
+++ b/test/test-member-noavatar.htm
@@ -934,7 +934,20 @@ document.write(
 </div></div></div>
 <script>pixiv.setupBeforeReady();</script><div id="header-banner">
 <span class='multi-ads-area'>
-    <iframe src="http://serv.ads.pixiv.org/get.php?zone_id=header&amp;segment=abroad&amp;page_id=all&amp;num=51582a08752" width="468" height="68" scrolling="no" marginwidth="0" style="border:none;" frameborder="0"></iframe></span></div><div class="ad-footer">
+    
+<script type="text/javascript"><!--
+google_ad_client = "ca-pub-2235350438225973";
+/* pixiv（PC版） ローテーションバナー　対海外ユーザー */
+google_ad_slot = "6233432044";
+google_ad_width = 468;
+google_ad_height = 60;
+google_page_url = "http://www.pixiv.net/";
+//-->
+</script>
+<script type="text/javascript"
+src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+</span></div><div class="ad-footer">
 <span class='multi-ads-area'>
     
 <script type="text/javascript"><!--
