update test case and fix #239

--- a/test/test-image-manga-2page.htm
+++ b/test/test-image-manga-2page.htm
@@ -1,5 +1,5 @@
-<!DOCTYPE html><html lang="en" class="_book-viewer rtl"><head><meta charset="utf-8"><title>【創作百合】雨と君の向こう#4</title><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=1280px"><link rel="canonical" href="http://www.pixiv.net/member_illust.php?mode=medium&amp;illust_id=46322053"><script>var pageLoadStartTime = +(new Date);</script><script>
-!function(){"use strict";function a(){if(navigator.userAgent.indexOf("MSIE")>=0){var a=navigator.userAgent.match(/MSIE (\d+)/);return parseInt(""+(a&&a[1]),10)}}function b(a,b){return Object.prototype.toString.call(a)==="[object "+b+"]"}function c(a){return b(a,"Event")}function d(a){return b(a,"Error")}function e(a){return b(a,"HTMLScriptElement")}var f=a();window.ErrorLogger=function(){function a(a,b,c){this.userId=a,this.production=b,this.premium=c,b?(this.service="www.pixiv.net",this.api="https://www.pixiv.net/rpc/js_error.php"):(this.service=location.host,this.api="/rpc/js_error.php")}return a.prototype.install=function(){var a=this,b=!1;window.onerror=function(c,d,e,f,g){window.onerror=null,a.handle(c,d,e,f,g,b)};var c=function(c){d(c.reason)&&(b||(b=!0,f&&f<10?(window.onerror=null,a.handle(c.reason.toString(),"Promise.reject",0,0,c.reason,!0)):setTimeout(function(){throw c.reason})))};window.onunhandledrejection=c,window.addEventListener&&window.addEventListener("unhandledrejection",c)},a.prototype.time=function(a,b,c){this.send("js_time",location.href,0,a,b,c)},a.prototype.send=function(a,b,f,g,h,i,j){var k=encodeURIComponent;try{var l=void 0;if(c(a))l=["type: "+a.type,e(a.target)?"target: {src: "+a.target.src+"}":"target: "+a.target,"currentTarget: "+a.currentTarget,"eventPhase: "+a.eventPhase].join(", ");else if(d(a))l=a.toString();else if("object"==typeof a)try{l=JSON.stringify(a)}catch(k){l=a}else l=a;j&&(l="Promise.reject: "+l);var m=["service="+k(this.service),"message="+k(l),"url="+k(""+b),"line="+k(""+f),"location="+k(location.href),"user_id="+k(this.userId),"premium="+this.premium];null!=g&&m.push("html_end_sec="+k(""+g),"dom_ready_sec="+k(""+(h||0)),"onload_sec="+k(""+(i||0))),(new Image).src=this.api+"?"+m.join("&")}catch(n){(new Image).src=this.api+"?service="+k(this.service)+"&message="+k("send error: "+n.message)+"&line="+k(""+(n.line||""))}},a.prototype.handle=function(a,b,c,d,e,g){if((b||0!==c)&&!(null!=f&&f<9)){var h=null!=e?e:a;this.production?this.send(h,b,c,void 0,void 0,void 0,!!g):"undefined"!=typeof console&&console&&console.debug||alert(["[JavaScript Error]","",h,"",(b||"unknown")+":"+(c||"unknown"),"","---",location.href].join("\n"))}},a}()}();
+<!DOCTYPE html><html lang="en" class="_book-viewer rtl"><head><meta charset="utf-8"><title>【創作百合】雨と君の向こう#4</title><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=1280px"><link rel="canonical" href="https://www.pixiv.net/member_illust.php?mode=medium&amp;illust_id=46322053"><script>var pageLoadStartTime = +(new Date);</script><script>
+!function(){"use strict";function a(){for(var a=[/\bMSIE\b/,/\bBingPreview\b/],b=0,c=a;b<c.length;b++){if(c[b].test(navigator.userAgent))return!0}return!1}function b(a,b){var c=b?"Promise.reject: ":"";if(d(a))return c+["type: "+a.type,f(a.target)?"target: {src: "+a.target.src+"}":"target: "+a.target,"currentTarget: "+a.currentTarget,"eventPhase: "+a.eventPhase].join(", ");if(e(a))return c+a.toString();if("object"==typeof a)try{return c+JSON.stringify(a)}catch(g){}return c+a}function c(a,b){return Object.prototype.toString.call(a)==="[object "+b+"]"}function d(a){return!!c(a,"Event")||/^\[object \w+Event\]$/.test(Object.prototype.toString.call(a))}function e(a){return c(a,"Error")}function f(a){return c(a,"HTMLScriptElement")}window.ErrorLogger=function(){function c(a,b,c){this.userId=a,this.production=b,this.premium=c,b?(this.service="www.pixiv.net",this.api="https://www.pixiv.net/rpc/js_error.php"):(this.service=location.host,this.api="/rpc/js_error.php")}return c.prototype.install=function(){var b=this;if(!a()){var c=!1;window.onerror=function(a,d,e,f,g){window.onerror=null,b.handle(a,d,e,f,g,c)};var d=function(a){e(a.reason)&&(c||(c=!0,setTimeout(function(){throw a.reason})))};window.onunhandledrejection=d,window.addEventListener&&window.addEventListener("unhandledrejection",d)}},c.prototype.time=function(a,b,c){this.send("js_time",location.href,0,a,b,c)},c.prototype.send=function(a,c,d,e,f,g,h){var i=encodeURIComponent;try{var j=b(a,!!h),k=["service="+i(this.service),"message="+i(j),"url="+i(""+c),"line="+i(""+d),"location="+i(location.href),"user_id="+i(this.userId),"premium="+this.premium];null!=e&&k.push("html_end_sec="+i(""+e),"dom_ready_sec="+i(""+(f||0)),"onload_sec="+i(""+(g||0))),(new Image).src=this.api+"?"+k.join("&")}catch(l){(new Image).src=this.api+"?service="+i(this.service)+"&message="+i("send error: "+l.message)+"&line="+i(""+(l.line||""))}},c.prototype.handle=function(a,b,c,d,e,f){if(b||0!==c){var g=null!=e?e:a;this.production?this.send(g,b,c,undefined,undefined,undefined,!!f):"undefined"!=typeof console&&console&&console.debug?"undefined"!=typeof navigator&&navigator.userAgent.match(/Firefox\//)&&console.error(g):alert(["[JavaScript Error]","",g,"",(b||"unknown")+":"+(c||"unknown"),"","---",location.href].join("\n"))}},c}()}();
     </script><script>
 (function() {
     var h = new ErrorLogger("189816",true,0);
@@ -9,14 +9,14 @@
     window._time = function () { h.time.apply(h, arguments) };
     window._send = function () { h.send.apply(h, arguments) };
 })()
-</script><link rel="stylesheet" href="https://source.pixiv.net/www/css/global.css?d1c66f3a267de8cc661af5d740ad4969"><link rel="stylesheet" href="https://source.pixiv.net/www/css/global_2.css?d1c66f3a267de8cc661af5d740ad4969"><link rel="stylesheet" href="https://source.pixiv.net/www/css/app.css?d749b588089d05bbc944d5a7064d1158"><!--[if IE 8]><script src="https://source.pixiv.net/www/js/lib/html5shiv/html5shiv.js"></script><![endif]--><script>
+</script><link rel="stylesheet" href="https://source.pixiv.net/www/css/global.css?3f4545cc1370292f8230d5a1eb5ee41e"><link rel="stylesheet" href="https://source.pixiv.net/www/css/global_2.css?3f4545cc1370292f8230d5a1eb5ee41e"><link rel="stylesheet" href="https://source.pixiv.net/www/css/app.css?e2c7482bc42378d2cabd90002cc6bbf8"><!--[if IE 8]><script src="https://source.pixiv.net/www/js/lib/html5shiv/html5shiv.js"></script><![endif]--><script>
         Object.defineProperty(window, 'bundle_public_path', {
             value: "https:\/\/source.pixiv.net\/www\/js\/bundle\/"
         })
-    </script><script src="https://source.pixiv.net/www/js/bundle/bootstrap.46cb892da2af68db0715.js" crossorigin="anonymous"></script>
-<script src="https://source.pixiv.net/www/js/bundle/lib.2ec944a52eea01b8cb5b.js" crossorigin="anonymous"></script>
-<script src="https://source.pixiv.net/www/js/bundle/colon.708f9906433fcd4bb0c1.js" crossorigin="anonymous"></script>
-<script src="https://source.pixiv.net/www/js/bundle/app.74a596acb0d3525f370c.js" crossorigin="anonymous"></script><script>pixiv.development = false;pixiv.securePath = "https:\/\/www.pixiv.net\/";pixiv.user.loggedIn = true;pixiv.user.id = "189816";pixiv.user.premium = false;pixiv.context.rated = false;pixiv.context.hasQuestionnaire = false;pixiv.context.userId = '"36527"';pixiv.context.illustId = '"46322053"';pixiv.context.bound = true;pixiv.context.mangaOld = false;pixiv.context.rtl = true;pixiv.context.pages = [];pixiv.context.images = [];pixiv.context.thumbnailImages = [];pixiv.context.originalImages = [];pixiv.context.originalSizes = [];pixiv.text.action = 'Like / Bookmarks';pixiv.text.fit = 'Resize image to window';pixiv.text.expanded = 'Enlarge image';
+    </script><script src="https://source.pixiv.net/www/js/bundle/bootstrap.fa947f2481814c9e78f3.js" crossorigin="anonymous"></script>
+<script src="https://source.pixiv.net/www/js/bundle/lib.587ac5ec827c46806728.js" crossorigin="anonymous"></script>
+<script src="https://source.pixiv.net/www/js/bundle/colon.ce955aaa9b724d572821.js" crossorigin="anonymous"></script>
+<script src="https://source.pixiv.net/www/js/bundle/app.fd42234210b5512f5858.js" crossorigin="anonymous"></script><script>pixiv.development = false;pixiv.securePath = "https:\/\/www.pixiv.net\/";pixiv.user.loggedIn = true;pixiv.user.id = "189816";pixiv.user.premium = false;pixiv.context.hasQuestionnaire = false;pixiv.context.userId = '"36527"';pixiv.context.illustId = '"46322053"';pixiv.context.bound = true;pixiv.context.mangaOld = false;pixiv.context.rtl = true;pixiv.context.pages = [];pixiv.context.images = [];pixiv.context.thumbnailImages = [];pixiv.context.originalImages = [];pixiv.context.originalSizes = [];pixiv.text.action = 'Like / Bookmarks';pixiv.text.fit = 'Resize image to window';pixiv.text.expanded = 'Enlarge image';
 var _gaq = _gaq || [];
 
 (function() {
@@ -36,12 +36,13 @@ _gaq.push(['_setDomainName', 'pixiv.net']);
 
 if (window.pixiv) {
     if (pixiv.user && pixiv.user.loggedIn) {
-        _gaq.push(['_setCustomVar', 1, "login", "yes", 3]);
-        _gaq.push(['_setCustomVar', 3, "plan", pixiv.user.premium ? "premium" : "normal", 1]);
-        _gaq.push(['_setCustomVar', 5, "gender", pixiv.user.gender, 1]);
-        _gaq.push(['_setCustomVar', 6, "user_id", pixiv.user.id, 1]);
+        _gaq.push(['_setCustomVar', 1, 'login', 'yes', 3]);
+        _gaq.push(['_setCustomVar', 3, 'plan', pixiv.user.premium ? 'premium' : 'normal', 1]);
+        _gaq.push(['_setCustomVar', 5, 'gender', pixiv.user.gender, 1]);
+        _gaq.push(['_setCustomVar', 6, 'user_id', pixiv.user.id, 1]);
+        _gaq.push(['_setCustomVar', 12, 'illustup_flg', pixiv.user.illustup_flg ? 'uploaded' : 'not_uploaded', 3]);
     } else {
-        _gaq.push(['_setCustomVar', 1, "login", "no", 3]);
+        _gaq.push(['_setCustomVar', 1, 'login', 'no', 3]);
     }
 
     
@@ -49,30 +50,32 @@ if (window.pixiv) {
 
     (function() {
         // クッキーあれば、一回でもログインした人とみなす
-        if (pixiv.user && colon.storage) {
+        if (pixiv.user && window.colon && colon.storage) {
             var cookie_name = 'login_ever';
 
             if (colon.storage.cookie(cookie_name)) {// 一度でもログインしたことある
-                _gaq.push(['_setCustomVar', 2, "login ever", "yes", 1]);
+                _gaq.push(['_setCustomVar', 2, 'login ever', 'yes', 1]);
 
             } else if (pixiv.user.loggedIn) { // ログインしてる
                 colon.storage.cookie(cookie_name, 'yes', {
                     expires: 1000 * 60 * 60 * 24 * 365 * 5, // 5 years
                     domain: location.hostname
                 });
-                _gaq.push(['_setCustomVar', 2, "login ever", "yes", 1]);
+                _gaq.push(['_setCustomVar', 2, 'login ever', 'yes', 1]);
 
             } else { // ログインしたこと無いし、ログインしてもない
-                _gaq.push(['_setCustomVar', 2, "login ever", "no", 1]);
+                _gaq.push(['_setCustomVar', 2, 'login ever', 'no', 1]);
             }
 
             
             var p_ab_id = colon.storage.cookie('p_ab_id');
             var p_ab_id_2 = colon.storage.cookie('p_ab_id_2');
-            _gaq.push(['_setCustomVar', 9, "p_ab_id", p_ab_id, 1]);
-            _gaq.push(['_setCustomVar', 10, "p_ab_id_2", p_ab_id_2, 1]);
+            _gaq.push(['_setCustomVar', 9, 'p_ab_id', p_ab_id, 1]);
+            _gaq.push(['_setCustomVar', 10, 'p_ab_id_2', p_ab_id_2, 1]);
         }
     } ())
+
+    _gaq.push(['_setCustomVar', 11, 'lang', "en", 1]);
 }
 
 
