--- a/test/test-image-manga-2page.htm
+++ b/test/test-image-manga-2page.htm
@@ -9,11 +9,11 @@
     window._time = function () { h.time.apply(h, arguments) };
     window._send = function () { h.send.apply(h, arguments) };
 })()
-</script><link rel="stylesheet" href="https://source.pixiv.net/www/css/global.css?ff3da474844f665d40140da5f307b72d"><link rel="stylesheet" href="https://source.pixiv.net/www/css/global_2.css?ff3da474844f665d40140da5f307b72d"><link rel="stylesheet" href="https://source.pixiv.net/www/css/app.css?5b140bc13774526147fc13b6d41bae03"><!--[if IE 8]><script src="https://source.pixiv.net/www/js/lib/html5shiv/html5shiv.js"></script><![endif]--><script>
+</script><link rel="stylesheet" href="https://source.pixiv.net/www/css/global.css?bae7da816185118f46772e700ad24fea"><link rel="stylesheet" href="https://source.pixiv.net/www/css/global_2.css?bae7da816185118f46772e700ad24fea"><link rel="stylesheet" href="https://source.pixiv.net/www/css/app.css?d21c405a34b7b80267005b2d5d1361ce"><!--[if IE 8]><script src="https://source.pixiv.net/www/js/lib/html5shiv/html5shiv.js"></script><![endif]--><script>
         Object.defineProperty(window, 'bundle_public_path', {
             value: "https:\/\/source.pixiv.net\/www\/js\/bundle\/"
         })
-    </script><link rel="stylesheet" href="https://source.pixiv.net/www/js/bundle/pixiv.7e8173cb62e5e98cde5f1eb0fde01288.css"><script src="https://source.pixiv.net/www/js/bundle/bootstrap.60018dcf527b217012d1.js" crossorigin="anonymous" ></script><script src="https://source.pixiv.net/www/js/bundle/lib.f87fd9a0f392c799629a.js" crossorigin="anonymous" ></script><script src="https://source.pixiv.net/www/js/bundle/colon.6ad8b14125bc7fb617f2.js" crossorigin="anonymous" ></script><script src="https://source.pixiv.net/www/js/bundle/pixiv.5295dc1a3645319a4c0d.js" crossorigin="anonymous" ></script><script>pixiv.development = false;pixiv.securePath = "https:\/\/www.pixiv.net\/";pixiv.user.loggedIn = true;pixiv.user.id = "189816";pixiv.user.premium = false;pixiv.context.hasQuestionnaire = false;pixiv.context.userId = '"36527"';pixiv.context.illustId = '"46322053"';pixiv.context.bound = true;pixiv.context.mangaOld = false;pixiv.context.rtl = true;pixiv.context.pages = [];pixiv.context.images = [];pixiv.context.thumbnailImages = [];pixiv.context.originalImages = [];pixiv.context.originalSizes = [];pixiv.text.action = 'Like / Bookmarks';pixiv.text.fit = 'Resize image to window';pixiv.text.expanded = 'Enlarge image';
+    </script><link rel="stylesheet" href="https://source.pixiv.net/www/js/bundle/pixiv.194183ab23f2b5b19ec9dca7bdb680be.css"><script src="https://source.pixiv.net/www/js/bundle/bootstrap.155742e19f0e9540b703.js" crossorigin="anonymous" ></script><script src="https://source.pixiv.net/www/js/bundle/lib.56c6de00d5830fac7859.js" crossorigin="anonymous" ></script><script src="https://source.pixiv.net/www/js/bundle/colon.d38768190225c5bd4b40.js" crossorigin="anonymous" ></script><script src="https://source.pixiv.net/www/js/bundle/pixiv.00fc6bdf1f69419a4fa2.js" crossorigin="anonymous" ></script><script>pixiv.development = false;pixiv.securePath = "https:\/\/www.pixiv.net\/";pixiv.user.loggedIn = true;pixiv.user.id = "189816";pixiv.user.premium = false;pixiv.context.hasQuestionnaire = false;pixiv.context.userId = '"36527"';pixiv.context.illustId = '"46322053"';pixiv.context.bound = true;pixiv.context.mangaOld = false;pixiv.context.rtl = true;pixiv.context.pages = [];pixiv.context.images = [];pixiv.context.thumbnailImages = [];pixiv.context.originalImages = [];pixiv.context.originalSizes = [];pixiv.text.action = 'Like / Bookmarks';pixiv.text.fit = 'Resize image to window';pixiv.text.expanded = 'Enlarge image';
 var _gaq = _gaq || [];
 
 (function() {
@@ -74,6 +74,10 @@ if (window.pixiv) {
 
     _gaq.push(['_setCustomVar', 11, 'lang', "en", 1]);
 }
+
+
+
+    _gaq.push(['_setSiteSpeedSampleRate', 20]);
 
 
 
