--- a/test/test-image-my_pick.html
+++ b/test/test-image-my_pick.html
@@ -94,9 +94,9 @@ var pageLoadStartTime = +(new Date);
 
 
 <link rel="stylesheet" href="https://source.pixiv.net/www/js/bundle/lib.7cdbca46401449012372.css">
-<link rel="stylesheet" href="https://source.pixiv.net/www/js/bundle/common.25824b241ee9b9d25096.css">
-<script src="https://source.pixiv.net/www/js/bundle/runtime.3557c965ac60a1f175d1.js" crossorigin="anonymous" ></script>
-<script src="https://source.pixiv.net/www/js/bundle/common.25824b241ee9b9d25096.js" crossorigin="anonymous" ></script>
+<link rel="stylesheet" href="https://source.pixiv.net/www/js/bundle/common.57812bd82d170b1349ae.css">
+<script src="https://source.pixiv.net/www/js/bundle/runtime.862219065bec2e399f3a.js" crossorigin="anonymous" ></script>
+<script src="https://source.pixiv.net/www/js/bundle/common.57812bd82d170b1349ae.js" crossorigin="anonymous" ></script>
 <script src="https://source.pixiv.net/www/js/bundle/lib.7cdbca46401449012372.js" crossorigin="anonymous" ></script>
 <script src="https://source.pixiv.net/www/js/bundle/pixiv.6a18e408b078ec92609e.js" crossorigin="anonymous" ></script>
 <!--[if lte IE 9]>
@@ -365,10 +365,10 @@ pixiv.text.femaleRanking = 'Popularity Ranking (Females)';
             <div id="header-banner" class="ad"><span class='multi-ads-area'>
     <!-- rotation -->
 <div>
-        <iframe name="header" src="https://d.pixiv.org/show?zone_id=header&segments=r18&format=html&s=1&up=0&ng=r&l=en&K=69ec144648&ab_test_digits_first=2&ab_test_digits_second=7&suid=Pfpddsan65r5rhe2b&num=5aa9f406211" width="468" height="60"></iframe>
+        <iframe name="header" src="https://d.pixiv.org/show?zone_id=header&segments=r18&format=html&s=1&up=0&a=33&ng=r&l=en&K=69ec144648&ab_test_digits_first=5&ab_test_digits_second=2&suid=Pfpf0y0tozzhc0jui&num=5aabd3c1493" width="468" height="60"></iframe>
 </div></span></div><div class="ad-footer" class="ad"><span class='multi-ads-area'>
     <div style='margin-left:auto; margin-right:auto;'>
-        <iframe name="footer" width="728" height="130" src="https://d.pixiv.org/show?zone_id=footer&segments=r18&format=html&s=1&up=0&ng=r&l=en&K=69ec144648&ab_test_digits_first=2&ab_test_digits_second=7&suid=Pfpddsan6c1rb8ifk&num=5aa9f406237"></iframe>
+        <iframe name="footer" width="728" height="130" src="https://d.pixiv.org/show?zone_id=footer&segments=r18&format=html&s=1&up=0&a=33&ng=r&l=en&K=69ec144648&ab_test_digits_first=5&ab_test_digits_second=2&suid=Pfpf0y0tpavcl81mb&num=5aabd3c1443"></iframe>
 </div></span></div><footer class="footer _classic-footer ya-pc-overlay"><div class="container"><ul class="languages"><li>
             <form name="setja" method="POST" action="/rpc_language_setting.php">
         <input type="hidden" name="mode" value="set">
