update test case

--- a/test/test-image-manga-2page.htm
+++ b/test/test-image-manga-2page.htm
@@ -14,7 +14,7 @@
         value: "https:\/\/source.pixiv.net\/www\/js\/bundle\/"
     })
 </script>
-
+<meta id="meta-pixiv-tests" name="pixiv-tests" content="{&quot;www_premium_lead_popular_d_popup_d&quot;:true}">
 
 <link rel="stylesheet" href="https://source.pixiv.net/www/js/bundle/lib.7cdbca46401449012372.css">
 <link rel="stylesheet" href="https://source.pixiv.net/www/js/bundle/common.57812bd82d170b1349ae.css">
