--- a/test/test-image-my_pick.html
+++ b/test/test-image-my_pick.html
@@ -91,7 +91,7 @@ var pageLoadStartTime = +(new Date);
         value: "https:\/\/source.pixiv.net\/www\/js\/bundle\/"
     })
 </script>
-
+<meta id="meta-pixiv-tests" name="pixiv-tests" content="{&quot;www_premium_lead_popular_d_popup_d&quot;:true}">
 
 <link rel="stylesheet" href="https://source.pixiv.net/www/js/bundle/lib.7cdbca46401449012372.css">
 <link rel="stylesheet" href="https://source.pixiv.net/www/js/bundle/common.57812bd82d170b1349ae.css">
@@ -365,10 +365,10 @@ pixiv.text.femaleRanking = 'Popularity Ranking (Females)';
             <div id="header-banner" class="ad"><span class='multi-ads-area'>
     <!-- rotation -->
 <div>
-        <iframe name="header" src="https://d.pixiv.org/show?zone_id=header&segments=r18&format=html&s=1&up=0&a=33&ng=r&l=en&K=69ec144648&ab_test_digits_first=5&ab_test_digits_second=2&suid=Pfpf0y0tozzhc0jui&num=5aabd3c1493" width="468" height="60"></iframe>
+        <iframe name="header" src="https://d.pixiv.org/show?zone_id=header&segments=r18&format=html&s=1&up=0&a=33&ng=r&l=en&K=69ec144648&ab_test_digits_first=3&ab_test_digits_second=3&suid=Pfpfhq118yt5mcxwa&num=5aac5bcf683" width="468" height="60"></iframe>
 </div></span></div><div class="ad-footer" class="ad"><span class='multi-ads-area'>
     <div style='margin-left:auto; margin-right:auto;'>
-        <iframe name="footer" width="728" height="130" src="https://d.pixiv.org/show?zone_id=footer&segments=r18&format=html&s=1&up=0&a=33&ng=r&l=en&K=69ec144648&ab_test_digits_first=5&ab_test_digits_second=2&suid=Pfpf0y0tpavcl81mb&num=5aabd3c1443"></iframe>
+        <iframe name="footer" width="728" height="130" src="https://d.pixiv.org/show?zone_id=footer&segments=r18&format=html&s=1&up=0&a=33&ng=r&l=en&K=69ec144648&ab_test_digits_first=3&ab_test_digits_second=3&suid=Pfpfhq1199q7pshtw&num=5aac5bcf796"></iframe>
 </div></span></div><footer class="footer _classic-footer ya-pc-overlay"><div class="container"><ul class="languages"><li>
             <form name="setja" method="POST" action="/rpc_language_setting.php">
         <input type="hidden" name="mode" value="set">
