--- a/test/test-member-nologin.htm
+++ b/test/test-member-nologin.htm
@@ -75,14 +75,15 @@ var pageLoadStartTime = +(new Date);
 <!--<![endif]-->
 
 
-<link rel="stylesheet" href="https://s.pximg.net/www/js/bundle/pixiv.css~whitecube.55b5b7b95244c0dacf29.1.css" crossorigin="anonymous"><link rel="stylesheet" href="https://s.pximg.net/www/js/bundle/pixiv.css.023da2377b61698ee9c8.1.css" crossorigin="anonymous"><script src="https://s.pximg.net/www/js/bundle/runtime.5c2b1029501c5f3c6e0b.js" charset="utf8" crossorigin="anonymous"></script><script src="https://s.pximg.net/www/js/bundle/pixiv.css~whitecube.15526b090c1c177fb2a4.js" charset="utf8" crossorigin="anonymous"></script><script src="https://s.pximg.net/www/js/bundle/pixiv.css.806d2221985b3adab128.js" charset="utf8" crossorigin="anonymous"></script>        <script>
+<link rel="stylesheet" href="https://s.pximg.net/www/js/bundle/pixiv.css~whitecube.55b5b7b95244c0dacf29.1.css" crossorigin="anonymous"><link rel="stylesheet" href="https://s.pximg.net/www/js/bundle/pixiv.css.023da2377b61698ee9c8.1.css" crossorigin="anonymous"><script src="https://s.pximg.net/www/js/bundle/runtime.0a7bc9cb8be5d4bec9b1.js" charset="utf8" crossorigin="anonymous"></script><script src="https://s.pximg.net/www/js/bundle/pixiv.css~whitecube.2a5ffcd1b28feb32aed3.js" charset="utf8" crossorigin="anonymous"></script><script src="https://s.pximg.net/www/js/bundle/pixiv.css.c25f8c69eccbe1da1d76.js" charset="utf8" crossorigin="anonymous"></script>        <script>
     Object.defineProperty(window, 'bundle_public_path', {
         value: "https:\/\/s.pximg.net\/www\/js\/bundle\/"
     })
 </script>
 <meta id="meta-pixiv-tests" name="pixiv-tests" content="{&quot;toggles&quot;:{&quot;toggle_www_nologin_spa_search_on_login&quot;:true}}">
 
-<link rel="stylesheet" href="https://s.pximg.net/www/js/bundle/pixiv.213a9f779699a832812c.1.css" crossorigin="anonymous"><script src="https://s.pximg.net/www/js/bundle/vendors~pixiv~stacc3.398b1d5a206958096a30.js" charset="utf8" crossorigin="anonymous"></script><script src="https://s.pximg.net/www/js/bundle/vendors~pixiv.555be5e4da7cae244e89.js" charset="utf8" crossorigin="anonymous"></script><script src="https://s.pximg.net/www/js/bundle/pixiv.911fc4aec043f3613532.js" charset="utf8" crossorigin="anonymous"></script>
+<meta name="global-data" id="meta-global-data" content='{"token":"2a09b0a8b3f653388f35b6fc1dd352aa","services":{"booth":"https://api.booth.pm","sketch":"https://sketch.pixiv.net","vroidHub":"https://hub.vroid.com","accounts":"https://accounts.pixiv.net/"},"oneSignalAppId":"b2af994d-2a00-40ba-b1fa-684491f6760a","publicPath":"https://s.pximg.net/www/js/bundle/","commonResourcePath":"https://s.pximg.net/common/","development":false,"userData":null,"miscData":{"consent":{"gdpr":false}},"premium":{},"mute":[]}'>
+<link rel="stylesheet" href="https://s.pximg.net/www/js/bundle/pixiv.213a9f779699a832812c.1.css" crossorigin="anonymous"><script src="https://s.pximg.net/www/js/bundle/vendors~pixiv~stacc3.10413fc69f4d7bbb8eeb.js" charset="utf8" crossorigin="anonymous"></script><script src="https://s.pximg.net/www/js/bundle/vendors~pixiv.45e41e147eda7e9c4895.js" charset="utf8" crossorigin="anonymous"></script><script src="https://s.pximg.net/www/js/bundle/pixiv.f73301f7478c1e42a2d1.js" charset="utf8" crossorigin="anonymous"></script>
 <!--[if lte IE 9]>
     <script src="https://s.pximg.net/www/js/lib/ajaxhooks/xdr.js"></script>
 <![endif]-->
@@ -93,7 +94,7 @@ var pageLoadStartTime = +(new Date);
     pixiv.commonSourcePath = "https:\/\/s.pximg.net\/common\/";
     pixiv.config.sketchUrlBase = "https:\/\/sketch.pixiv.net";
     pixiv.config.oneSignalAppId = "b2af994d-2a00-40ba-b1fa-684491f6760a";
-    pixiv.context.token = "3ca8fdaa2d93ac15078bfe80c8454567";
+    pixiv.context.token = "2a09b0a8b3f653388f35b6fc1dd352aa";
     
     </script>
     <script>
@@ -123,7 +124,7 @@ var pageLoadStartTime = +(new Date);
             _gaq.push(['_setCustomVar', 1, 'login', 'no', 3]);
         }
 
-        _gaq.push(['_setCustomVar', 25, 'first_visit_datetime_pc', "2019-11-01 15:02:39", 3]);
+        _gaq.push(['_setCustomVar', 25, 'first_visit_datetime_pc', "2019-11-06 13:49:41", 3]);
 
         (function() {
             // クッキーあれば、一回でもログインした人とみなす
@@ -196,7 +197,7 @@ if (window.pixiv && !pixiv.text) pixiv.text = {};
 
 
 
-        <link rel="stylesheet" href="https://s.pximg.net/www/js/bundle/whitecube.48219699aa07cc1a4937.1.css" crossorigin="anonymous"><script src="https://s.pximg.net/www/js/bundle/whitecube.59094568114e45504ed2.js" charset="utf8" crossorigin="anonymous"></script><link rel="stylesheet" href="https://s.pximg.net/www/css/novel.css?e33e02939027a17c33dcf867633e3485">    <link rel="stylesheet" type="text/css" href="https://s.pximg.net/www/css/accounts-index.css?bb3a6fda029303d4c48dde6c65b5287c">
+        <link rel="stylesheet" href="https://s.pximg.net/www/js/bundle/whitecube.48219699aa07cc1a4937.1.css" crossorigin="anonymous"><script src="https://s.pximg.net/www/js/bundle/whitecube.da76a02b1ff59a273326.js" charset="utf8" crossorigin="anonymous"></script><link rel="stylesheet" href="https://s.pximg.net/www/css/novel.css?e33e02939027a17c33dcf867633e3485">    <link rel="stylesheet" type="text/css" href="https://s.pximg.net/www/css/accounts-index.css?bb3a6fda029303d4c48dde6c65b5287c">
 
         <script>pixiv.context.backgroundSlideshow = true</script>
     <script src="https://s.pximg.net/common/background-slideshow/bundle.js?d254c75c1687037fa95b"></script>
