--- a/test/test-member-nologin.htm
+++ b/test/test-member-nologin.htm
@@ -75,15 +75,15 @@ var pageLoadStartTime = +(new Date);
 <!--<![endif]-->
 
 
-<link rel="stylesheet" href="https://s.pximg.net/www/js/bundle/pixiv.css~whitecube.55b5b7b95244c0dacf29.1.css" crossorigin="anonymous"><link rel="stylesheet" href="https://s.pximg.net/www/js/bundle/pixiv.css.023da2377b61698ee9c8.1.css" crossorigin="anonymous"><script src="https://s.pximg.net/www/js/bundle/runtime.0a7bc9cb8be5d4bec9b1.js" charset="utf8" crossorigin="anonymous"></script><script src="https://s.pximg.net/www/js/bundle/pixiv.css~whitecube.2a5ffcd1b28feb32aed3.js" charset="utf8" crossorigin="anonymous"></script><script src="https://s.pximg.net/www/js/bundle/pixiv.css.c25f8c69eccbe1da1d76.js" charset="utf8" crossorigin="anonymous"></script>        <script>
+<link rel="stylesheet" href="https://s.pximg.net/www/js/bundle/pixiv.css~whitecube.55b5b7b95244c0dacf29.1.css" crossorigin="anonymous"><link rel="stylesheet" href="https://s.pximg.net/www/js/bundle/pixiv.css.713ffd9eebff86bdcdb9.1.css" crossorigin="anonymous"><script src="https://s.pximg.net/www/js/bundle/runtime.da8a1e8ceea426374e1c.js" charset="utf8" crossorigin="anonymous"></script><script src="https://s.pximg.net/www/js/bundle/pixiv.css~whitecube.b59468ba015cc1cf3e74.js" charset="utf8" crossorigin="anonymous"></script><script src="https://s.pximg.net/www/js/bundle/pixiv.css.31a9a5bc45c96b7a2177.js" charset="utf8" crossorigin="anonymous"></script>        <script>
     Object.defineProperty(window, 'bundle_public_path', {
         value: "https:\/\/s.pximg.net\/www\/js\/bundle\/"
     })
 </script>
 <meta id="meta-pixiv-tests" name="pixiv-tests" content="{&quot;toggles&quot;:{&quot;toggle_www_nologin_spa_search_on_login&quot;:true}}">
 
-<meta name="global-data" id="meta-global-data" content='{"token":"2a09b0a8b3f653388f35b6fc1dd352aa","services":{"booth":"https://api.booth.pm","sketch":"https://sketch.pixiv.net","vroidHub":"https://hub.vroid.com","accounts":"https://accounts.pixiv.net/"},"oneSignalAppId":"b2af994d-2a00-40ba-b1fa-684491f6760a","publicPath":"https://s.pximg.net/www/js/bundle/","commonResourcePath":"https://s.pximg.net/common/","development":false,"userData":null,"miscData":{"consent":{"gdpr":false}},"premium":{},"mute":[]}'>
-<link rel="stylesheet" href="https://s.pximg.net/www/js/bundle/pixiv.213a9f779699a832812c.1.css" crossorigin="anonymous"><script src="https://s.pximg.net/www/js/bundle/vendors~pixiv~stacc3.10413fc69f4d7bbb8eeb.js" charset="utf8" crossorigin="anonymous"></script><script src="https://s.pximg.net/www/js/bundle/vendors~pixiv.45e41e147eda7e9c4895.js" charset="utf8" crossorigin="anonymous"></script><script src="https://s.pximg.net/www/js/bundle/pixiv.f73301f7478c1e42a2d1.js" charset="utf8" crossorigin="anonymous"></script>
+<meta name="global-data" id="meta-global-data" content='{"token":"066e0fb5d65ca39c49afa334f0b9f19b","services":{"booth":"https://api.booth.pm","sketch":"https://sketch.pixiv.net","vroidHub":"https://hub.vroid.com","accounts":"https://accounts.pixiv.net/"},"oneSignalAppId":"b2af994d-2a00-40ba-b1fa-684491f6760a","publicPath":"https://s.pximg.net/www/js/bundle/","commonResourcePath":"https://s.pximg.net/common/","development":false,"userData":null,"miscData":{"consent":{"gdpr":false}},"premium":{},"mute":[]}'>
+<link rel="stylesheet" href="https://s.pximg.net/www/js/bundle/pixiv.663ab38fad70bad1fd3c.1.css" crossorigin="anonymous"><script src="https://s.pximg.net/www/js/bundle/vendors~pixiv~stacc3.0ecf9ad78fa9362a5c14.js" charset="utf8" crossorigin="anonymous"></script><script src="https://s.pximg.net/www/js/bundle/vendors~pixiv.79228c0aaaae8fb9965d.js" charset="utf8" crossorigin="anonymous"></script><script src="https://s.pximg.net/www/js/bundle/pixiv.3d3817ce8412593cd321.js" charset="utf8" crossorigin="anonymous"></script>
 <!--[if lte IE 9]>
     <script src="https://s.pximg.net/www/js/lib/ajaxhooks/xdr.js"></script>
 <![endif]-->
@@ -94,7 +94,7 @@ var pageLoadStartTime = +(new Date);
     pixiv.commonSourcePath = "https:\/\/s.pximg.net\/common\/";
     pixiv.config.sketchUrlBase = "https:\/\/sketch.pixiv.net";
     pixiv.config.oneSignalAppId = "b2af994d-2a00-40ba-b1fa-684491f6760a";
-    pixiv.context.token = "2a09b0a8b3f653388f35b6fc1dd352aa";
+    pixiv.context.token = "066e0fb5d65ca39c49afa334f0b9f19b";
     
     </script>
     <script>
@@ -124,7 +124,7 @@ var pageLoadStartTime = +(new Date);
             _gaq.push(['_setCustomVar', 1, 'login', 'no', 3]);
         }
 
-        _gaq.push(['_setCustomVar', 25, 'first_visit_datetime_pc', "2019-11-06 13:49:41", 3]);
+        _gaq.push(['_setCustomVar', 25, 'first_visit_datetime_pc', "2019-11-16 00:13:44", 3]);
 
         (function() {
             // クッキーあれば、一回でもログインした人とみなす
@@ -197,7 +197,7 @@ if (window.pixiv && !pixiv.text) pixiv.text = {};
 
 
 
-        <link rel="stylesheet" href="https://s.pximg.net/www/js/bundle/whitecube.48219699aa07cc1a4937.1.css" crossorigin="anonymous"><script src="https://s.pximg.net/www/js/bundle/whitecube.da76a02b1ff59a273326.js" charset="utf8" crossorigin="anonymous"></script><link rel="stylesheet" href="https://s.pximg.net/www/css/novel.css?e33e02939027a17c33dcf867633e3485">    <link rel="stylesheet" type="text/css" href="https://s.pximg.net/www/css/accounts-index.css?bb3a6fda029303d4c48dde6c65b5287c">
+        <link rel="stylesheet" href="https://s.pximg.net/www/js/bundle/whitecube.48219699aa07cc1a4937.1.css" crossorigin="anonymous"><script src="https://s.pximg.net/www/js/bundle/whitecube.bb5c8986719e2cedf872.js" charset="utf8" crossorigin="anonymous"></script><link rel="stylesheet" href="https://s.pximg.net/www/css/novel.css?e33e02939027a17c33dcf867633e3485">    <link rel="stylesheet" type="text/css" href="https://s.pximg.net/www/css/accounts-index.css?bb3a6fda029303d4c48dde6c65b5287c">
 
         <script>pixiv.context.backgroundSlideshow = true</script>
     <script src="https://s.pximg.net/common/background-slideshow/bundle.js?d254c75c1687037fa95b"></script>
@@ -240,7 +240,7 @@ pixiv.text.femaleRanking = '女子に人気ランキング';
         </div>
     </noscript>
 
-    <div id="background-slideshow"></div><div id='search-bar'></div><div class="signup-form"><div class="signup-form__logo-box"><div class="signup-form__logo"></div><div class="signup-form__catchphrase">創作活動をもっとたのしく</div></div><div><a href="/signup.php?return_to=https%3A%2F%2Fwww.pixiv.net%2Fmember_illust.php%3Fid%3D143229&amp;ref=wwwtop_accounts_index" class="signup-form__submit ga-event" data-category="signup_pc_page" data-action="step1" data-label="mail">新規登録</a><a href="/login.php?return_to=https%3A%2F%2Fwww.pixiv.net%2Fmember_illust.php%3Fid%3D143229&amp;ref=wwwtop_accounts_index" class="signup-form__submit--login">ログイン</a></div><div class="signup-form__sns-btn-area"><div>持っているアカウントではじめる</div><div class="sns-button-list"><a href="https://accounts.pixiv.net/gigya-auth?mode=signin&amp;provider=googleplus&amp;source=pc&amp;view_type=page&amp;return_to=https%3A%2F%2Fwww.pixiv.net%2Fmember_illust.php%3Fid%3D143229&amp;lang=ja&amp;ref=wwwtop_accounts_index_google" class="btn-item btn-gplus ga-event" data-category="signup_pc_page" data-action="step1" data-label="googleplus" rel="nofollow"></a><a href="https://accounts.pixiv.net/gigya-auth?mode=signin&amp;provider=facebook&amp;source=pc&amp;view_type=page&amp;return_to=https%3A%2F%2Fwww.pixiv.net%2Fmember_illust.php%3Fid%3D143229&amp;lang=ja&amp;ref=wwwtop_accounts_index_facebook" class="btn-item btn-facebook ga-event" data-category="signup_pc_page" data-action="step1" data-label="facebook" rel="nofollow"></a><a href="https://accounts.pixiv.net/gigya-auth?mode=signin&amp;provider=twitter&amp;source=pc&amp;view_type=page&amp;return_to=https%3A%2F%2Fwww.pixiv.net%2Fmember_illust.php%3Fid%3D143229&amp;lang=ja&amp;ref=wwwtop_accounts_index_twitter" class="btn-item btn-twitter ga-event" data-category="signup_pc_page" data-action="step1" data-label="twitter" rel="nofollow"></a></div></div><div class="recaptcha-terms">
+    <div id="background-slideshow"></div><div id='search-bar'></div><div class="signup-form"><div class="signup-form__logo-box"><div class="signup-form__logo"></div><div class="signup-form__catchphrase">創作活動をもっとたのしく</div></div><div><a href="/signup.php?return_to=https%3A%2F%2Fwww.pixiv.net%2Fmember_illust.php%3Fid%3D143229&amp;ref=wwwtop_accounts_index" class="signup-form__submit ga-event" data-category="signup_pc_page" data-action="step1" data-label="mail">新規登録</a><a href="/login.php?return_to=https%3A%2F%2Fwww.pixiv.net%2Fmember_illust.php%3Fid%3D143229&amp;ref=wwwtop_accounts_index" class="signup-form__submit--login">ログイン</a></div><div class="signup-form__sns-btn-area"><div>持っているアカウントではじめる</div><div class="sns-button-list"><a href="https://accounts.pixiv.net/gigya-auth?mode=signin&amp;provider=googleplus&amp;source=pc&amp;view_type=page&amp;return_to=https%3A%2F%2Fwww.pixiv.net%2Flogin.php%3Freturn_to%3Dhttps%253A%252F%252Fwww.pixiv.net%252Fmember_illust.php%253Fid%253D143229%26force%3D1&amp;lang=ja&amp;ref=wwwtop_accounts_index_google" class="btn-item btn-gplus ga-event" data-category="signup_pc_page" data-action="step1" data-label="googleplus" rel="nofollow"></a><a href="https://accounts.pixiv.net/gigya-auth?mode=signin&amp;provider=facebook&amp;source=pc&amp;view_type=page&amp;return_to=https%3A%2F%2Fwww.pixiv.net%2Flogin.php%3Freturn_to%3Dhttps%253A%252F%252Fwww.pixiv.net%252Fmember_illust.php%253Fid%253D143229%26force%3D1&amp;lang=ja&amp;ref=wwwtop_accounts_index_facebook" class="btn-item btn-facebook ga-event" data-category="signup_pc_page" data-action="step1" data-label="facebook" rel="nofollow"></a><a href="https://accounts.pixiv.net/gigya-auth?mode=signin&amp;provider=twitter&amp;source=pc&amp;view_type=page&amp;return_to=https%3A%2F%2Fwww.pixiv.net%2Flogin.php%3Freturn_to%3Dhttps%253A%252F%252Fwww.pixiv.net%252Fmember_illust.php%253Fid%253D143229%26force%3D1&amp;lang=ja&amp;ref=wwwtop_accounts_index_twitter" class="btn-item btn-twitter ga-event" data-category="signup_pc_page" data-action="step1" data-label="twitter" rel="nofollow"></a></div></div><div class="recaptcha-terms">
     This site is protected by reCAPTCHA and the Google
     <a href="https://policies.google.com/privacy"> Privacy Policy</a> and
     <a href="https://policies.google.com/terms"> Terms of Service</a> apply.
