--- a/template.html
+++ b/template.html
@@ -4,7 +4,7 @@
 <title>%artistName% - %imageTitle%</title>
 <meta charset="utf-8">
 <style type="text/css">
-.container {margin:auto; display:inline-block; padding:10px;} body {text-align:center;} h1 {text-align:left;} h5 {text-align:left;} p {text-align:left;padding-left:5%;} img {max-width:100%;margin:auto} a {margin:auto;}
+.container {margin:auto; display:inline-block; padding:10px;} body {text-align:center;} h1 {text-align:left;} h5 {text-align:left;} p {text-align:left;padding-left:5%;padding-right:5%;} img {max-width:100%;margin:auto} a {margin:auto;}
 </style>
 </head>
 <body>
