HTML style adjustment for FANBOX (#711)
* Align all contents in the middle

* Also update the html template in constants

* Update template.html

* Update PixivConstant.py

--- a/template.html
+++ b/template.html
@@ -4,7 +4,7 @@
 <title>%artistName% - %imageTitle%</title>
 <meta charset="utf-8">
 <style type="text/css">
-div{overflow:auto; margin:auto; text-align:center;} h1{text-align:left;} h5{text-align:left;} p{text-align:left; padding-left:5%;padding-right:5%;} img{max-width:100%;} a{margin:auto;} .root{display:inline-block; padding:10px;} .non-article.root{position:fixed; height:85%; top:0px; bottom:15%; left:0px; right:0px;} .non-article.text{position:fixed; height:15%; bottom:0px; left:0px; right:0px;}
+  body{text-align:center;} div{overflow:auto; margin:auto; text-align:center;} h1{text-align:left;} h5{text-align:left;} p{text-align:left; padding-left:5%; padding-right:5%;} img{max-width:100%;} a{margin:auto;} .root{display:inline-block; padding:10px;} .non-article.root{position:fixed; height:85%; top:0px; bottom:15%; left:0px; right:0px;} .non-article.text{position:fixed; height:15%; bottom:0px; left:0px; right:0px;}
 </style>
 </head>
 <body>
